# secure-javascript-sandbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  release.mjs  temp1.js
crates/axum_handler/: Cargo.toml
crates/axum_handler/src/: env.rs  evaluate.rs  evaluate_function.rs  evaluate_module.rs  evaluate_request.rs  evaluate_response.rs  lib.rs  server_config.rs  strip_types.rs  ts_utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/host/: Cargo.toml
crates/host/src/: build.rs  lib.rs
crates/interpreter_boa/: Cargo.toml
crates/interpreter_boa/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: build.rs  function_sandbox.rs  http.rs  imports.rs  ip_utils.rs  lib.rs  limit_values.rs  memory.rs  module_sandbox.rs  sandbox.rs  sandbox.wit  shared_vec.rs  state.rs  tsutils.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  signal.rs
crates/ts_utils/: Cargo.toml
crates/ts_utils/src/: lib.rs  module_compiler.rs  module_visitor.rs  str_handler.rs  type_stripper.rs
crates/ts_utils/wit/: ts-utils.wit
crates/ts_utils_wasm/: Cargo.toml
crates/ts_utils_wasm/src/: lib.rs
sandbox/: build.mts  input.js  package-lock.json  package.json  sandbox-host-code.js  tsconfig.json
sandbox/wit/: sandbox.wit
tests/: benchmark.zsh  insecure-nodejs-sandbox.js  test-api-abuse.sh  test-api.sh  test-errors.sh  test-fetch.zsh  test.ts
tests/imports/: fib.js  import-map.json
wasm-sandbox/: .gitignore  README.md  modulesandbox.js  package-lock.json  package.json  sandbox.js
wit/: modulesandbox.wit  sandbox.wit  tsutils.wit
