[package]
name = "secure_js_sandbox_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.0", features = ["derive"] }
secure_js_sandbox_host = { version = "0.1.0" }
