[package]
name = "secure_js_sandbox_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}