[package]
name = "secure_js_sandbox"
version = "0.1.0"
edition = "2024"
publish = false
build = "src/build.rs"

[lib]
crate-type = ["lib"]

[build-dependencies]
anyhow = "1.0.100"
wasmtime = { version = "45.0.2", features = ["component-model"] }

[dependencies]
anyhow = "1.0.100"
http-body-util = "0.1.3"
hyper = "1.8.1"
rustls = "0.23.35"
secure_js_sandbox_ts_utils = { version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.41"
wasmtime = "45.0.2"
wasmtime-wasi = "45.0.2"
wasmtime-wasi-http = "45.0.2"
webpki-roots = "1.0.4"

[features]
build-plugins = []
