[package]
name = "secure_js_sandbox_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "env"] }
futures = { version = "0.3.21" }
hyper = { version = "0.14", features = ["full"] }
index_list = { version = "0.2.7" }
lazy_static = { version = "1.4.0" }
secure_js_sandbox_host = { version = "0.1.0" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tokio = { version = "1", features = ["full"] }
