[package]
name = "secure_js_sandbox_ts_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes-str = "0.2.7"
serde = { version = "1.0.228", features = ["derive"] }
swc = { version = "46.0.1" }
swc_common = "17.0.1"
swc_ecma_ast = "18.0.0"
swc_ecma_codegen = "20.0.2"
swc_ecma_parser = "27.0.6"
swc_ecma_transforms_base = "30.0.0"
swc_ecma_visit = "18.0.1"
swc_ts_fast_strip = "36.0.0"

[dev-dependencies]
secure_js_sandbox = { version = "0.1.0" }
tokio = { version = "1.38.0", features = ["full"] }
