[package]
name = "secure_js_sandbox_ts_utils"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
bytes-str = "0.2.7"
swc = "69.0.0"
swc_common = "23.0.2"
swc_ecma_ast = "25.0.0"
swc_ecma_codegen = "28.0.2"
swc_ecma_parser = "41.1.2"
swc_ecma_transforms_base = "44.0.3"
swc_ecma_visit = "25.0.0"
swc_ts_fast_strip = "53.0.0"
wit-bindgen = "0.58.0"

[dev-dependencies]
secure_js_sandbox = { version = "0.1.0" }
serde_json = { version = "1.0.145" }
tokio = { version = "1.38.0", features = ["full"] }
